@@ -1,12 +1,17 @@
 package com.vonzhou.learn.jvm.oom;
 
+import java.util.ArrayList;
+import java.util.List;
+
+/**
+ * -XX:PermSize=10M -XX:MaxPermSize=10M
+ */
 public class RuntimeConstantPoolOOM {
 	public static void main(String[] args) {
-		String str1 = new StringBuilder("�����").append("���").toString();
-		System.out.println(str1.intern() == str1);
-		
-		String str2 = new StringBuilder("ja").append("va").toString();
-		System.out.println(str2.intern() == str2);
+		List<String> list = new ArrayList<String>();
+		int i = 0;
+		while(true){
+			list.add(String.valueOf(i++).intern());
+		}
 	}
-
 }
